--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
